[package]
name = "ch-bench-rust-http"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clickhouse = "0.11.4"
tokio = { version = "1.14.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }

[profile.release-adjusted]
inherits = "release"
lto = true
codegen-units = 1
