[package]
name = "ch-bench-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "*"
clickhouse-rs = "1.0.0-alpha.1"
futures-util = "*"
tokio = { version = "1.14.0", features = ["full"] }

[profile.release-adjusted]
inherits = "release"
lto = true
codegen-units = 1
